io-hotmoka-examples/src/main/java/io/hotmoka/tests/errors/inconsistentredpayable2/Super.java
package io.hotmoka.tests.errors.inconsistentredpayable2;

import io.takamaka.code.lang.Contract;
import io.takamaka.code.lang.FromContract;

public class Super extends Contract {
	public @FromContract void m() {}
}